src/objects/LG_Customer_Payment__c.object
<CustomObject>
    <description>Customer Payment to allocate the mitigation payment resulted from the credit check including the payment transaction details.</description>
    <fields>
        <fullName>AVSResponseCode__c</fullName>
        <description>Address Verification Result provided by acquirer [RSP_AVS_CD]</description>
        <label>Address Verification Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Record_Identifier_Fraud_Record_ID__c</fullName>
        <description>FRAUD_REC_ID</description>
        <label>Fraud Record Identifier (Fraud Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ACIPaymentTransactionID__c</fullName>
        <label>ACI Payment Transaction ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ACI_Refund_Reverse_Transaction_ID__c</fullName>
        <formula>if(isblank(LG_ReverseOrRefundTransactionId__c ),&apos;&apos;,(&apos;VM8&apos;+ LG_ReverseOrRefundTransactionId__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACI Refund Reverse Transaction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ACQID__c</fullName>
        <description>ACQ_ID</description>
        <label>ACQ ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Payments</relationshipLabel>
        <relationshipName>Customer_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LG_Acquirer_Response_Code__c</fullName>
        <label>Acquirer Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Address_DNA_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AuthorizationNumberResponse__c</fullName>
        <description>RSP_AUTH_NUM</description>
        <label>Authorization Number Response</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Customer Payments</relationshipLabel>
        <relationshipName>Customer_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_BusinessTerm__c</fullName>
        <label>Required Mitigation Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CP_Transaction_ID__c</fullName>
        <description>Field added as a part of Defect#1173</description>
        <displayFormat>VM8{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>ACI Transaction ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_Card_Expiry_Date__c</fullName>
        <label>Card Expiry Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DNAResponse__c</fullName>
        <label>DNAResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_DepositAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The value from Mitigation_Deposit  must map to &apos;Deposit Amount&apos;</description>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_DepositDuration__c</fullName>
        <description>The duration in months for which the customers up front deposit payment is held with VM.</description>
        <label>Deposit Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FraudMatrixKey__c</fullName>
        <formula>LG_FraudResponseCode__c+LG_FraudStatusCode__c+LG_cardTokenStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used as key for Fraud Matrix</inlineHelpText>
        <label>Fraud Matrix Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FraudNeuralScoreResponse__c</fullName>
        <description>Fraud Neural (Score) Response [FRAUD_NEURAL]</description>
        <label>Fraud Neural (Score) Response</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FraudResponseCode__c</fullName>
        <description>Fraud Response Code [FRAUD_RSP_CD]</description>
        <label>Fraud Response Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FraudRuleCategoryFlagResponse__c</fullName>
        <description>Fraud Rule Category Flag Response [FRAUD_RCF]</description>
        <label>Fraud Rule Category Flag Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_FraudStatusCode__c</fullName>
        <description>FRAUD_STAT_CD</description>
        <label>Fraud Status Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FraudUseCodeResponse__c</fullName>
        <description>FRAUD_USE_CD</description>
        <label>Fraud Use Code Response</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_IPAddress__c</fullName>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_IssuerResponseCode__c</fullName>
        <description>Issuer Response Code [RSP_ISSUER_CD]</description>
        <label>Issuer Response Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NameonPaymentCard__c</fullName>
        <description>RWS_NAME_ON_CARD</description>
        <label>Name on Payment Card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OrderNumber__c</fullName>
        <description>Payment Order Number</description>
        <displayFormat>VM8{0000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_PartyAccountID__c</fullName>
        <label>PartyAccountID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PaymentCardNumberMasked__c</fullName>
        <description>ACCT_NUM</description>
        <label>Payment Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PaymentDateTime__c</fullName>
        <label>Payment Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_PaymentTransactionID__c</fullName>
        <formula>LG_Payment_TransactionID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment TransactionID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PaymentURL__c</fullName>
        <description>The payment URL via which the customer or agent can enter card details to make the actual payment</description>
        <label>Payment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LG_Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_Payment_Date__c</fullName>
        <formula>DATEVALUE(LG_paymentResponseDate__c)</formula>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_Payment_Reason__c</fullName>
        <label>Payment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Upfront</fullName>
                </value>
                <value>
                    <fullName>Deposit &amp; Upfront</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Payment_Session_ID__c</fullName>
        <label>Payment Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refunded</fullName>
                </value>
                <value>
                    <fullName>Reversed</fullName>
                </value>
                <value>
                    <fullName>Taken</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
                <value>
                    <fullName>Not Taken</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Payment_TransactionID__c</fullName>
        <label>Payment TransactionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>BACS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_RAWCallbackResponse__c</fullName>
        <description>This is to store the RAW callback response</description>
        <label>RAW Callback Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_RWSResponseCode__c</fullName>
        <label>RWS Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_RefundOrderId__c</fullName>
        <formula>if(ISPICKVAL(LG_Payment_Status__c, &apos;Refunded&apos;), LG_Reverse_Refund_Payment_Transaction_ID__c,&apos;&apos;)</formula>
        <label>Refund Order Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_RequestID__c</fullName>
        <description>ORD_ID [Card Token]</description>
        <label>Unique Reference Number for Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_RequestTypeCodePaymentMethodTrans__c</fullName>
        <description>REQ_TYPE_CD</description>
        <label>Request Type Code (Payment Method, Trans</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ResponseCodeAuthorizationResponse__c</fullName>
        <description>RSP_CD</description>
        <label>Response Code (Authorization Response)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ResponseCodeDescription__c</fullName>
        <label>ResponseCodeDescription</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ResponseCode__c</fullName>
        <label>ResponseCode</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ResponseDate__c</fullName>
        <description>Response Date (Authorization Date) [RSP_DT]</description>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ReverseOrRefundTransactionId__c</fullName>
        <label>Reverse/Refund Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ReverseRefundPaymentDate__c</fullName>
        <label>Reverse/Refund Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_Reverse_Refund_Payment_Transaction_ID__c</fullName>
        <description>REVERSE_REFUND_CARDPAYMENTTRANSACTIONID</description>
        <displayFormat>VM8R{00000000}</displayFormat>
        <label>Reverse/Refund Payment Transaction ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_SecureElectronicCommerceIndicatorDes__c</fullName>
        <formula>&apos;0:Authentication Failed – cardholder authentication failed; authorization request should not be submitted,1:Authentication Successful – cardholder was successfully authenticated.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secure Electronic Commerce Indicator Des</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SecureElectronicCommerceIndicator__c</fullName>
        <description>Secure Electronic Commerce Indicator [TDS_ECI]</description>
        <label>Secure Electronic Commerce Indicator</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_SecurityResponseCode__c</fullName>
        <description>RSP_SEC_CD</description>
        <label>Security Response Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_StatusCodeDescription__c</fullName>
        <label>StatusCodeDescription</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_SystemName__c</fullName>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TokenProcID__c</fullName>
        <description>Token Proc ID [TOKEN_PROC_ID]</description>
        <label>Token Proc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_UniqueReferenceNumberforOrderRefund__c</fullName>
        <description>Unique Reference Number for Order Refund</description>
        <label>Unique Reference Number for Order Refund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_UpfrontAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Upfront Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_UserID__c</fullName>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VMTransactionID__c</fullName>
        <formula>if(isblank(LG_ACIPaymentTransactionID__c),&apos;&apos;,(&apos;VM8&apos;+ LG_ACIPaymentTransactionID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VM Transaction ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VerificationResponseCode__c</fullName>
        <description>RSP_VER_CD</description>
        <label>Verification Response Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_acquirerResponseMessage__c</fullName>
        <description>Message returned by upstream entity if provided [RWS_RESPONSE_MESSAGE]</description>
        <label>RWS Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_cardPaymentTransactionID__c</fullName>
        <description>A unique identifier for each card payment transaction. Usually, but not always necessarily, of format Example: VM8000000001</description>
        <label>Card Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_cardTokenExpiryDate__c</fullName>
        <description>Token expiry date</description>
        <label>Token expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_cardTokenStatus__c</fullName>
        <description>Token Status Code [TOKEN_STAT_CD]</description>
        <label>Token Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_cardToken__c</fullName>
        <description>Token number returned by ReD1’s Gateway. This determines whether the transaction is submitted as a tokenized transaction. [TOKEN_ID]</description>
        <label>Card Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_cardTypeCode__c</fullName>
        <description>The payment card type represented with below codes. [	LG_cardTypeCode__c]</description>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DI</fullName>
                </value>
                <value>
                    <fullName>JC</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>VI</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>Other Alternative Payments CA</fullName>
                </value>
                <value>
                    <fullName>TK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_fraudAssessmentStatusCode__c</fullName>
        <description>Fraud check status</description>
        <label>Fraud check status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCEPT</fullName>
                </value>
                <value>
                    <fullName>DENY</fullName>
                </value>
                <value>
                    <fullName>CHALLENGE</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>SUSPEND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_paymentAuthorisationCode__c</fullName>
        <description>Authorisation Code returned by the acquirer in the case of an approved transaction</description>
        <label>Authorization code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_paymentCardToken__c</fullName>
        <description>A token number which is unique for the payment card and expiry date. Its usually a refence used instead of the actual card itself during refund or reversal or retrieval of payment results from third party or other payment engines.</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_paymentRequestTypeCode__c</fullName>
        <description>Request Type Code (Payment Method, Transaction Category)</description>
        <label>Payment Request Type Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_paymentResponseCode__c</fullName>
        <description>The response code for the payment.</description>
        <label>Response Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OC_SUCCESS</fullName>
                </value>
                <value>
                    <fullName>OC_FAIL</fullName>
                </value>
                <value>
                    <fullName>OC_REQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_paymentResponseDate__c</fullName>
        <description>Date Time the response was returned – format YYYY-MM-DD HH-MM-SS</description>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_paymentResponseMessage__c</fullName>
        <description>Payment Response Message</description>
        <label>Payment Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_paymentVerificationCode__c</fullName>
        <label>Verification code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lg_CardExpirationDate__c</fullName>
        <description>CARD_EXP_DT</description>
        <label>Card Expiration Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Payments</relationshipLabel>
        <relationshipName>Customer_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPRN__c</fullName>
        <externalId>true</externalId>
        <label>UPRN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Customer Payment</label>
    <nameField>
        <label>Customer Payment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>